release: 2.7.0