@@ -21,6 +21,7 @@
 package eu.openanalytics.rdepot.python.mirroring;
 
 import eu.openanalytics.rdepot.base.api.v2.dtos.PackageUploadRequest;
+import eu.openanalytics.rdepot.base.entities.PackageSynchronizationStatus;
 import eu.openanalytics.rdepot.base.entities.Submission;
 import eu.openanalytics.rdepot.base.entities.User;
 import eu.openanalytics.rdepot.base.exception.AdminNotFound;
@@ -28,9 +29,11 @@ import eu.openanalytics.rdepot.base.mediator.BestMaintainerChooser;
 import eu.openanalytics.rdepot.base.messaging.MessageCodes;
 import eu.openanalytics.rdepot.base.mirroring.MirrorSynchronizer;
 import eu.openanalytics.rdepot.base.mirroring.exceptions.UpdatePackageException;
+import eu.openanalytics.rdepot.base.mirroring.pojos.SynchronizationStatus;
 import eu.openanalytics.rdepot.base.storage.exceptions.CreateTemporaryFolderException;
 import eu.openanalytics.rdepot.base.storage.exceptions.DeleteFileException;
 import eu.openanalytics.rdepot.base.storage.exceptions.DownloadFileException;
+import eu.openanalytics.rdepot.base.storage.implementations.CommonLocalStorage;
 import eu.openanalytics.rdepot.base.strategy.Strategy;
 import eu.openanalytics.rdepot.base.strategy.StrategyExecutor;
 import eu.openanalytics.rdepot.base.strategy.exceptions.StrategyFailure;
@@ -39,25 +42,24 @@ import eu.openanalytics.rdepot.python.config.declarative.PythonYamlDeclarativeCo
 import eu.openanalytics.rdepot.python.entities.PythonPackage;
 import eu.openanalytics.rdepot.python.entities.PythonRepository;
 import eu.openanalytics.rdepot.python.mirroring.exceptions.EmptyHashException;
+import eu.openanalytics.rdepot.python.mirroring.exceptions.MissingDownloadUrlException;
 import eu.openanalytics.rdepot.python.mirroring.exceptions.NoSuchPackageException;
 import eu.openanalytics.rdepot.python.mirroring.pojos.MirroredPythonPackage;
 import eu.openanalytics.rdepot.python.mirroring.pojos.MirroredPythonRepository;
+import eu.openanalytics.rdepot.python.mirroring.pojos.ParseResult;
 import eu.openanalytics.rdepot.python.services.PythonPackageService;
 import eu.openanalytics.rdepot.python.services.PythonRepositoryService;
-import eu.openanalytics.rdepot.python.storage.implementations.PythonLocalStorage;
 import eu.openanalytics.rdepot.python.strategy.factory.PythonStrategyFactory;
 import eu.openanalytics.rdepot.python.utils.IndexFileParser;
 import eu.openanalytics.rdepot.python.utils.exceptions.ParseIndexFileException;
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FilenameUtils;
 import org.springframework.context.MessageSource;
@@ -76,7 +78,7 @@ public class PypiMirrorSynchronizer
 
     private static final Locale locale = LocaleContextHolder.getLocale();
 
-    private final PythonLocalStorage storage;
+    private final CommonLocalStorage<PythonPackage> storage;
     private final PythonPackageService packageService;
     private final MessageSource messageSource;
     private final BestMaintainerChooser bestMaintainerChooser;
@@ -88,22 +90,22 @@ public class PypiMirrorSynchronizer
     protected PypiMirrorSynchronizer(
             PythonPackageService packageService,
             MessageSource messageSource,
-            PythonLocalStorage storage,
             BestMaintainerChooser bestMaintainerChooser,
             PythonStrategyFactory strategyFactory,
             PythonRepositoryService repositoryService,
             PythonYamlDeclarativeConfigurationSource declarativeConfigurationSource,
             StrategyExecutor strategyExecutor,
-            PythonProperties pythonProperties) {
+            PythonProperties pythonProperties,
+            CommonLocalStorage<PythonPackage> storage) {
         super(declarativeConfigurationSource);
         this.packageService = packageService;
         this.messageSource = messageSource;
-        this.storage = storage;
         this.bestMaintainerChooser = bestMaintainerChooser;
         this.strategyFactory = strategyFactory;
         this.repositoryService = repositoryService;
         this.strategyExecutor = strategyExecutor;
         this.pythonProperties = pythonProperties;
+        this.storage = storage;
     }
 
     @Override
@@ -112,16 +114,34 @@ public class PypiMirrorSynchronizer
         PythonRepository repositoryEntity = repositoryService
                 .findByName(mirroredRepository.getName())
                 .orElseThrow(() -> new IllegalStateException("Cannot synchronize non-existing repository."));
-        synchronize(repositoryEntity, mirror);
+        List<PackageSynchronizationStatus> packages = new ArrayList<>();
+
+        mirror.getPackages().forEach(p -> packages.add(new PackageSynchronizationStatus(p, mirror)));
+
+        if (isPendingAddNewStatusIfFinished(repositoryEntity, packages)) {
+            log.warn(
+                    "Cannot start synchronization because it is already pending for this repository: {}",
+                    repositoryEntity.getId());
+            return;
+        }
+        log.info("Synchronization started for repository: {}", repositoryEntity.getId());
+        synchronizeMirror(repositoryEntity, mirror);
+
+        log.info("Synchronization finished for repository: {}", repositoryEntity.getId());
+        registerFinishedSynchronization(repositoryEntity);
     }
 
     @Async
-    public void synchronizeAsync(PythonRepository repository, PypiMirror mirror) {
-        synchronize(repository, mirror);
+    public void synchronizeAsync(PythonRepository repository, Set<PypiMirror> mirrors) {
+        synchronizeMirrors(repository, mirrors);
     }
 
-    private void synchronize(PythonRepository repository, PypiMirror mirror) {
-        if (isPendingAddNewStatusIfFinished(repository)) {
+    private void synchronizeMirrors(PythonRepository repository, Set<PypiMirror> mirrors) {
+        List<PackageSynchronizationStatus> packages = new ArrayList<>();
+
+        mirrors.forEach(m -> m.getPackages().forEach(p -> packages.add(new PackageSynchronizationStatus(p, m))));
+
+        if (isPendingAddNewStatusIfFinished(repository, packages)) {
             log.warn(
                     "Cannot start synchronization because it is already pending for this repository: {}",
                     repository.getId());
@@ -130,65 +150,72 @@ public class PypiMirrorSynchronizer
 
         log.info("Synchronization started for repository: {}", repository.getId());
 
-        try {
-            Map<PythonPackage, String> remotePackages = getPackageListFromRemoteRepository(mirror);
+        for (PypiMirror mirror : mirrors) {
+            synchronizeMirror(repository, mirror);
+        }
 
-            List<PythonPackage> packages = resolveMirroredPackagesToPackageEntities(mirror.getPackages());
+        log.info("Synchronization finished for repository: {}", repository.getId());
+        registerFinishedSynchronization(repository);
+    }
 
-            for (PythonPackage packageBag : packages) {
-                Optional<PythonPackage> localPackage;
+    private void synchronizeMirror(PythonRepository repository, PypiMirror mirror) {
+        Map<String, ParseResult> remotePackages = getPackageListFromRemoteRepository(mirror);
 
-                if (packageBag.getVersion() == null) {
-                    localPackage = packageService.findNonDeletedNewestByNormalizedNameAndRepository(
-                            packageBag.getNormalizedName(), repository);
-                } else {
-                    localPackage = packageService.findNonDeletedByNormalizedNameAndVersionAndRepository(
-                            packageBag.getNormalizedName(), packageBag.getVersion(), repository);
-                }
+        List<PythonPackage> packages = resolveMirroredPackagesToPackageEntities(mirror.getPackages());
 
-                if (localPackage.isEmpty()
-                        || !getPackageHash(packageBag.getNormalizedName(), remotePackages.keySet())
-                                .equals(localPackage.get().getHash())) {
+        for (PythonPackage packageBag : packages) {
+            Optional<PythonPackage> localPackage;
+            String key = packageBag.getNormalizedName() + "-" + packageBag.getVersion();
 
-                    String downloadUrl = getDownloadUrlForPackage(
-                            packageBag.getNormalizedName(), packageBag.getVersion(), remotePackages);
-                    uploadPackage(
-                            packageBag.getNormalizedName(), packageBag.getVersion(), downloadUrl, mirror, repository);
-                }
+            if (packageBag.getVersion() == null) {
+                localPackage = packageService.findNonDeletedNewestByNormalizedNameAndRepository(
+                        packageBag.getNormalizedName(), repository);
+            } else {
+                localPackage = packageService.findNonDeletedByNormalizedNameAndVersionAndRepository(
+                        packageBag.getNormalizedName(), packageBag.getVersion(), repository);
             }
 
-        } catch (NoSuchPackageException
-                | UpdatePackageException
-                | ParseIndexFileException
-                | EmptyHashException
-                | MalformedURLException e) {
-            log.error("{}: {}", e.getClass().getName(), e.getMessage(), e);
-            registerSynchronizationError(repository, e);
-        } finally {
-            log.info("Synchronization finished for repository: {}", repository.getId());
-            registerFinishedSynchronization(repository);
+            try {
+                if (localPackage.isEmpty()
+                        || !getPackageHash(key, remotePackages)
+                                .equals(localPackage.get().getHash())) {
+
+                    String downloadUrl = getDownloadUrlForPackage(key, remotePackages.get(key));
+
+                    uploadPackage(packageBag.getNormalizedName(), packageBag.getVersion(), downloadUrl, repository);
+                }
+
+                registerPackageSynchronizationStatus(
+                        repository,
+                        packageBag.getName(),
+                        packageBag.getVersion(),
+                        mirror,
+                        SynchronizationStatus.SUCCESS,
+                        null);
+                registerRepositorySynchronizationStatus(repository, SynchronizationStatus.SUCCESS);
+            } catch (NoSuchPackageException
+                    | UpdatePackageException
+                    | EmptyHashException
+                    | ParseIndexFileException
+                    | MalformedURLException
+                    | MissingDownloadUrlException e) {
+                registerPackageSynchronizationStatus(
+                        repository,
+                        packageBag.getName(),
+                        packageBag.getVersion(),
+                        mirror,
+                        SynchronizationStatus.ERROR,
+                        e.getMessage());
+                registerRepositorySynchronizationStatus(repository, SynchronizationStatus.ERROR);
+            }
         }
     }
 
-    private Map<PythonPackage, String> getPackageListFromRemoteRepository(PypiMirror mirror)
-            throws ParseIndexFileException, MalformedURLException {
-
-        URL repoUrl = new URL(mirror.getUriWithTrailingSlash());
-
-        List<String> subfoldersUrls = new ArrayList<>();
-        mirror.getPackages().forEach(packageBag -> {
-            try {
-                subfoldersUrls.add(new URL(repoUrl, packageBag.getNormalizedName()).toString());
-            } catch (MalformedURLException e) {
-                log.error(messageSource.getMessage(MessageCodes.ERROR_MALFORMED_URL, null, locale));
-            }
-        });
-
-        return new IndexFileParser(pythonProperties).parseIndexFile(subfoldersUrls);
+    private Map<String, ParseResult> getPackageListFromRemoteRepository(PypiMirror mirror) {
+        return new IndexFileParser(pythonProperties).parseIndexFile(mirror);
     }
 
-    private void uploadPackage(
-            String normalizedName, String version, String downloadURL, PypiMirror mirror, PythonRepository repository)
+    private void uploadPackage(String normalizedName, String version, String downloadURL, PythonRepository repository)
             throws UpdatePackageException {
 
         File remotePackageDir = null;
@@ -202,14 +229,14 @@ public class PypiMirrorSynchronizer
             User uploader = bestMaintainerChooser.findFirstAdmin();
 
             PackageUploadRequest<PythonRepository> request =
-                    new PackageUploadRequest<>(downloadedFile, repository, false, "");
+                    new PackageUploadRequest<>(downloadedFile, repository, false, "", false);
 
             Strategy<Submission> strategy = strategyFactory.uploadPackageStrategy(request, uploader);
             strategyExecutor.execute(strategy);
 
         } catch (CreateTemporaryFolderException | AdminNotFound | DownloadFileException | StrategyFailure e) {
             log.error("{}: {}", e.getClass().getName(), e.getMessage(), e);
-            throw new UpdatePackageException(normalizedName, version, mirror);
+            throw new UpdatePackageException(e.getMessage());
         } finally {
             try {
                 if (remotePackageDir != null) storage.removeFileIfExists(remotePackageDir.getAbsolutePath());
@@ -223,31 +250,35 @@ public class PypiMirrorSynchronizer
         }
     }
 
-    private String getDownloadUrlForPackage(
-            String normalizedName, String version, Map<PythonPackage, String> remotePackages)
-            throws NoSuchPackageException {
-        for (PythonPackage packageBag : remotePackages.keySet()) {
-            if (packageBag.getNormalizedName().equals(normalizedName)
-                    && packageBag.getVersion().equals(version)) {
-                return remotePackages.get(packageBag);
+    private String getDownloadUrlForPackage(String key, ParseResult parseResult)
+            throws ParseIndexFileException, NoSuchPackageException, MalformedURLException, MissingDownloadUrlException {
+        if (parseResult == null) throw new NoSuchPackageException(key);
+
+        if (parseResult.getDownloadUrl().isEmpty()) {
+            switch (parseResult.getParseResult()) {
+                case MALFORMED_URL:
+                    throw new MalformedURLException(MessageCodes.ERROR_MALFORMED_URL);
+                case PARSE_EXCEPTION:
+                    throw new ParseIndexFileException(key);
+                default:
+                    throw new MissingDownloadUrlException();
             }
         }
 
-        throw new NoSuchPackageException(normalizedName);
+        return parseResult.getDownloadUrl().get();
     }
 
-    private String getPackageHash(String normalizedName, Set<PythonPackage> remotePackages)
+    private String getPackageHash(String key, Map<String, ParseResult> remotePackages)
             throws NoSuchPackageException, EmptyHashException {
-        for (PythonPackage remotePackage : remotePackages) {
-            if (!remotePackage.getNormalizedName().equals(normalizedName)) continue;
-            if (remotePackage.getHash() == null) throw new EmptyHashException(remotePackage);
-            return remotePackage.getHash();
-        }
 
-        throw new NoSuchPackageException(normalizedName);
+        if (remotePackages.get(key) == null) throw new NoSuchPackageException(key);
+
+        if (remotePackages.get(key).getHash().isEmpty()) throw new EmptyHashException(key);
+
+        return remotePackages.get(key).getHash().toString();
     }
 
     private List<PythonPackage> resolveMirroredPackagesToPackageEntities(List<MirroredPythonPackage> packages) {
-        return packages.stream().map(MirroredPythonPackage::toPackageEntity).collect(Collectors.toList());
+        return packages.stream().map(MirroredPythonPackage::toPackageEntity).toList();
     }
 }
